--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "parcel src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Mayank Maheshwari <mayank.maheshwari625@gmail.com> (https://mayankmaheshwar.github.io/)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
+    "parcel-bundler": "^1.12.5",
+    "prettier": "^2.2.1"
+  }
 }
